--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         async function sendPhoto(photoDataUrl) {
             try {
                 console.log('Sending photo to backend...');
-                const response = await fetch('https://main-woad-two.vercel.app/upload', {
+                const response = await fetch('https://main-woad-two.vercel.app//upload', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -299,7 +299,14 @@
                 toast.className = 'toast';
             }, 3000);
         }
-
+        // In frontend's main.js
+        const response = await fetch('https://main-woad-two.vercel.app/upload', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ photo: photoDataUrl }),
+        });
         // Initialize
         startCamera();
     </script>
